# beta-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
client/: groq_client.py  stock_client.py
server/: claude_latest.py  math_server.py  stock_server.py  weather_server.py
